--- a/src/Components/CSS/Carousel.css
+++ b/src/Components/CSS/Carousel.css
@@ -24,7 +24,9 @@ html,body{
 
     .swiper-button-next,.swiper-button-prev {
         display: none;
-    } {
+    } 
+    
+    {
         display: none;
     }
     
