--- a/src/Components/CSS/Carousel-cards.css
+++ b/src/Components/CSS/Carousel-cards.css
@@ -55,3 +55,17 @@ html,body{
     width: 40vw !important;
     /* margin: 0px !important; */
 }
+
+@media (max-width:600px) {
+    
+}
+
+
+
+
+
+
+
+
+
+
