--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,5 @@
 :root{
-    --blue-color:rgb(28 63 119);
-    --yellow-color:#fff500;
-    --offWhite-color:  rgb(225 225 225);
-    --black-color: rgb(55 55 55);
+     overflow-x: hidden;
 
 }
 .yellow{
