--- a/src/Components/CSS/Carousel.css
+++ b/src/Components/CSS/Carousel.css
@@ -18,6 +18,10 @@ html,body{
     display: none;
 }
 
+.swiper-button-next,.swiper-button-prev{
+    color: white;
+}
+
 @media (max-width:600px) {
     .height{
         width: 85vw;
