--- a/src/Components/CSS/Faculty-card.css
+++ b/src/Components/CSS/Faculty-card.css
@@ -67,7 +67,7 @@
 }
 
 .container .card:hover .imgBx{
-  top: 5%;
+  top: 9%;
   transform: translateY(0%);
     
 }
@@ -77,7 +77,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 270px;
+  width: 20.5vw;
 }
 
 .container .card .contentBx{
@@ -109,7 +109,7 @@
   font-weight: 600;
   letter-spacing: 1px;
   color: #fff;
-  margin-top: 1vh;
+  margin-top: 4vh;
 }
 
 .container .card .contentBx h1{
@@ -121,12 +121,12 @@
   }
 
   .container .card:hover .contentBx h1{
-    margin-top: 1vh;
+    margin-top: 8vh;
     margin-bottom: 2vh;
 }
 
 .container .card:hover .contentBx h2{
-    margin-top: 7vh;
+    margin-top: 11vh;
 }
 
 .container .card .contentBx .size, .container .card .contentBx .color {
@@ -208,4 +208,24 @@
       margin-top: 0;
       color: black;
     }
+
+    .container .card .imgBx img{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 317px;
+    }
+  }
+
+  @media (width:375px){
+     .faculty-middle .container{
+      margin-left: 6.8vw;
+     }
+  }
+
+  @media (min-width:350px) {
+    .faculty-middle .container{
+      margin-left: 4vw;
+     }
   }
