--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
 @tailwind utilities;
 
 
+.loco{
+    height: 916vh;
+  }
+
+  @media (max-width:1250px) {
+    .loco{
+      height: 875vh;
+    }
+  }
+
+  @media (max-width:1000px) {
+    .loco{
+      height: 825vh;
+    }
+  }
