--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,9 @@
     width: 100%;
 }
 
+table,th,td{
+    border: 2px solid rgb(234 179 8);
+    border-collapse: collapse;
+    padding: 5px;
+}
+
